--- a/shopmanager/templates/admin/base_site.html
+++ b/shopmanager/templates/admin/base_site.html
@@ -11,6 +11,7 @@
 .module h2, .module caption, .inline-group h2 { background:#ccc url(/media/img/admin/nav-bg.gif) bottom left repeat-x; color: #333940; }
 a.section:link, a.section:visited { color: #666666; }
 </style>
+<script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js"></script>
 <script src="{{ STATIC_URL }}closure-library/closure/goog/base.js"></script>
 {% endblock %}
 
