--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -117,15 +117,15 @@
 <table id="id_trade_order" class="table table-bordered">
 	<thead>
 		<tr>
-			<td>编号</td>
-			<td>商家编码</td>
-			<td>商品简称</td>
-			<td>规格</td>
-			<td>数量</td>
-			<td>单价</td>
-			<td>缺货</td>
-			<td>类型</td>
-			<td>操作</td>
+			<th>编号</th>
+			<th>商家编码</th>
+			<th>商品简称</th>
+			<th>规格</th>
+			<th>数量</th>
+			<th>单价</th>
+			<th>缺货</th>
+			<th>类型</th>
+			<th>操作</th>
 		</tr>
 	</thead>
 	<tbody>
@@ -142,7 +142,7 @@
 					{% endfor %}
 				</select> 
 			</td>
-			<td><input id="id-change-order-num-{{ forloop.counter }}" type="text" value="{{ order.num }}" size="2" /></td>
+			<td><input id="id-change-order-num-{{ forloop.counter }}" class="order_num" type="text" value="{{ order.num }}" size="8" /></td>
 			<td>{{ order.price }}</td>
 			<td>{% if order.out_stock %}
 				<img src="{{ STATIC_URL }}admin/img/icon-yes.gif" alt="yes">
@@ -159,6 +159,13 @@
 		</tr>
 		{% endfor %}
 	</tbody>
+	<tfoot id ="order-foot">
+		<tr>
+			<th colspan="4"></th>
+			<th><input type="text" id="total_num" value="{{ trade.total_num }}"/></th>
+			<th colspan="4"></th>
+		</tr>
+	</tfoot>
 </table>
 </div>
 </div>
