fix shopback trades app and checkorder js

--- a/shopmanager/templates/trades/check_order_template.html
+++ b/shopmanager/templates/trades/check_order_template.html
@@ -93,26 +93,6 @@
 <div class="accordion-heading1" style="margin: 5px 0px">
 <a id="collapseTwo" class="goog-zippy-header goog-zippy-expanded" style="padding: 0px 15px">商品列表››</a></div>
 <div id="orderContent" class="accordion-inner1">
-<div class="well form-search">
-	<input type="text" id="id-search-q" class="input-medium search-query" >
-	<button id="id-search-prod" class="btn">商品搜索</button>
-	<div style="height: 10px"></div>
-	<table id="id-search-table" class="table table-bordered">
-		<thead>
-			<tr>
-				<td>编号</td>
-				<td>商家编码</td>
-				<td>商品简称</td>
-				<td>规格</td>
-				<td>数量</td>
-				<td>单价</td>
-				<td>操作</td>
-			</tr>
-		</thead>
-		<tbody>
-		</tbody>
-	</table>
-</div>
 <div>
 <table id="id_trade_order" class="table table-bordered">
 	<thead>
@@ -167,6 +147,26 @@
 		</tr>
 	</tfoot>
 </table>
+</div>
+<div class="well form-search">
+	<input type="text" id="id-search-q" class="input-medium search-query" >
+	<button id="id-search-prod" class="btn">商品搜索</button>
+	<div style="height: 10px"></div>
+	<table id="id-search-table" class="table table-bordered" style="display:none;">
+		<thead>
+			<tr>
+				<td>编号</td>
+				<td>商家编码</td>
+				<td>商品简称</td>
+				<td>规格</td>
+				<td>数量</td>
+				<td>单价</td>
+				<td>操作</td>
+			</tr>
+		</thead>
+		<tbody>
+		</tbody>
+	</table>
 </div>
 </div>
 </div>
