fix purchase models and js amd template

--- a/shopmanager/templates/admin/purchases/change_list.html
+++ b/shopmanager/templates/admin/purchases/change_list.html
@@ -60,6 +60,11 @@
                 新采购单
               </a>
             </li>
+            <li>
+              <a href="/purchases/storage/add/" class="addlink" target="_blank">
+                新入库单
+              </a>
+            </li>
           {% endblock %}
         </ul>
       {% endif %}
