--- a/shopmanager/templates/purchases/purchase_page.html
+++ b/shopmanager/templates/purchases/purchase_page.html
@@ -247,7 +247,8 @@
 						</td>
 						<td style="text-align:center;padding-top:20px;">
 							<button id="save_purchase" class="btn btn-primary">保存 +</button>
-							<a class="btn btn-primary" href="{% if purchase %}/purchases/ship/{{ purchase.id }}/{% else %}#{% endif %}">审核 -></a>
+							<button id="check_purchase" class="btn btn-primary">审核</button>
+							<a href="{% if purchase %}/purchases/ship/{{ purchase.id }}/{% else %}#{% endif %}">入库详细</a>
 						</td>
 					</tr>
 				</table>
