fix purchase check permission and report form

--- a/shopmanager/templates/purchases/distribute_purchase_storage.html
+++ b/shopmanager/templates/purchases/distribute_purchase_storage.html
@@ -21,11 +21,11 @@
   <body class="container">
   	{% if storage_items %}
   	<div >
-  		<div><h2>入库单未关联项目</h2></div>
+  		<div><h2>未关联入库项目</h2></div>
   		<div>
   			<table id="undist-storage-table" class="table table-bordered table-striped table-condensed">
   				<thead>
-  					<th>入库项目ID</th>
+  					<th>项目ID</th>
   					<th>商品编码</th>
   					<th>商品名</th>
   					<th>规格编码</th>
