--- a/shopmanager/templates/purchases/distribute_purchase_storage.html
+++ b/shopmanager/templates/purchases/distribute_purchase_storage.html
@@ -5,22 +5,26 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css" />
-    <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
-    <link href='{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css' rel='stylesheet'  />
-    <script src="{{ STATIC_URL }}closure-library/closure/goog/base.js"></script>
+    <script src="{{ STATIC_URL }}jquery/jquery-1.8.13.min.js" type="text/javascript"></script>
     <style type="text/css">
-    	.simple-text{
-    		
-    	}
     	.simple-text label{
     		display:inline;
     	}
+    	.bottom-area{
+    		text-align:center;
+    	}
+    	.bottom-area button{
+    		padding:4px;
+    		margin-left:20px;
+    		
+    	}
+    	
     </style>
   </head>  
-  {% with purchases=object.ship_purchases storage_items=object.undist_storage_items %}
+  {% with purchases=object.ship_purchases storage_items=object.undist_storage_items purchase_storage=object.purchase_storage perms=object.perms %}
   <body class="container">
   	{% if storage_items %}
-  	<div >
+  	<div class="head-area">
   		<div><h2>未关联入库项目</h2></div>
   		<div>
   			<table id="undist-storage-table" class="table table-bordered table-striped table-condensed">
@@ -32,7 +36,6 @@
   					<th>规格名</th>
   					<th>入库数</th>
   					<th>待分配数</th>
-  					<th>操作</th>
   				</thead>
   				<tbody>
   					{% for item in storage_items %}
@@ -44,7 +47,6 @@
   						<td>{{ item.properties_name }}</td>
   						<td>{{ item.storage_num }}</td>
   						<td>{{ item.undist_storage_num }}</td>
-  						<td><a href="javascript:void(0);" class="ship-purchase">关联采购项</a></td>
   					</tr>
   					{% endfor %}
   				</tbody>
@@ -52,7 +54,7 @@
   		</div>
   	</div>
   	{% endif %}
-  	<div>
+  	<div class="center-area">
   		<div><h2>关联采购单</h2></div>
   		<div>
   			<table id="ship-purchase-table" class="table table-bordered table-striped table-condensed">
@@ -66,7 +68,6 @@
   					<th>采购数</th>
   					<th>已入库数</th>
   					<th>现入库数</th>
-  					<th>操作</th>
   				</thead>
   				<tbody>
 			  		{% for purchase in purchases %}
@@ -91,7 +92,6 @@
 	  						<td>{{ item.purchase_num }}</td>
 	  						<td>{{ item.storage_num }}</td>
 	  						<td>{{ item.ship_num }}</td>
-	  						<td><a href="javascript:void(0);" class="ship-purchase">关联采购项</a></td>
 	  					</tr>
 	  					{% endfor %}
 	  					{% endwith %}
@@ -102,6 +102,39 @@
 			 </table>
 		</div>
   	</div>
+  	<div class="bottom-area">
+  		<a href="/purchases/storage/refresh/{{ purchase_storage.id }}/" {% if perms.refresh_storage_ship %}class="btn btn-info"
+  			{% else %}class="btn btn-inverse" disabled="disabled"{% endif %}>重新关联</a>
+  		<button id="confirm-purchase-ship"  {% if perms.confirm_storage_ship %}class="btn btn-primary"
+  			{% else %}class="btn btn-inverse" disabled="disabled"{% endif %}>确认收货</button>
+  	<div>
   </body>
   {% endwith %}
+  <script type="text/javascript">
+  	
+  	//确认关联采购单
+  	$('#confirm-purchase-ship').click(function(e){
+  		var url  = window.location.href;
+  		var callback = function(data){
+  			try{
+				if (data.code==0){
+					var res = data.response_content;
+					window.location='/admin/purchases/purchasestorage/?status__exact=APPROVAL&q='+res.id;
+				}else{
+					alert('提交失败:'+data.response_error);
+				}
+			}catch (err) {
+				console.log('Error: (ajax callback) - ', err);
+			}
+		};
+		
+		$.ajax({ 
+		    type: 'POST', 
+		    url: url, 
+		    data: {'ab':1} , 
+		    dataType: 'json',
+		    success: callback
+		});
+  	});
+  </script>
 </html>
