--- a/shopmanager/templates/purchases/purchase_storage_page.html
+++ b/shopmanager/templates/purchases/purchase_storage_page.html
@@ -183,7 +183,7 @@
  <body>
 	<div class="content-main">
 		<fieldset>
-			<legend><h2 class="head-title" >采购入库单(NO:<input type="text" id="id_purchase_storage" value="{{ purchase_storage.id }}" disabled="disabled"/>)</h2></legend>
+			<legend><h2 class="head-title" >采购入库单(NO:<label id="id_purchase_storage" class="label label-success">{% if purchase_storage %}{{ purchase_storage.id }}{% endif %}</label>)</h2></legend>
 			<div class="content-base-info">
 				<table class="table table-bordered table-striped table-condensed">
 					<tr>
