fix purchase and monitor district company

--- a/shopmanager/templates/admin/purchases/change_list.html
+++ b/shopmanager/templates/admin/purchases/change_list.html
@@ -65,6 +65,11 @@
                 新入库单
               </a>
             </li>
+            <li>
+              <a href="/purchases/payment/" class="addlink" target="_blank">
+                新付款单
+              </a>
+            </li>
           {% endblock %}
         </ul>
       {% endif %}
